# tauri-agent-tools

./: .contextignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  mkdocs.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: changelog.md  contributing.md  index.md  platform-support.md
docs/architecture/: bridge-protocol.md  overview.md
docs/commands/: console-monitor.md  diff.md  dom.md  eval.md  index.md  info.md  ipc-monitor.md  list-windows.md  mutations.md  page-state.md  rust-logs.md  screenshot.md  snapshot.md  storage.md  wait.md
docs/getting-started/: bridge-setup.md  installation.md  quick-start.md
examples/tauri-bridge/: Cargo.toml
examples/tauri-bridge/src/: dev_bridge.rs
rust-bridge/: README.md
specs/_archive/: schemas-progress.md
specs/_templates/: new-feature.md
src/: cli.ts  schemas.ts  types.ts
src/bridge/: client.ts  tokenDiscovery.ts
src/commands/: consoleMonitor.ts  diff.ts  dom.ts  ipcMonitor.ts  listWindows.ts  mutations.ts  pageState.ts  rustLogs.ts  screenshot.ts  shared.ts  snapshot.ts  storage.ts
src/platform/: detect.ts  macos.ts  wayland.ts  x11.ts
src/schemas/: bridge.ts
src/util/: exec.ts  image.ts  magick.ts
tests/bridge/: client.test.ts  tokenDiscovery.test.ts
tests/commands/: consoleMonitor.test.ts  diff.test.ts  dom.test.ts  domText.test.ts  info.test.ts  ipcMonitor.test.ts  wait.test.ts  (+8 more)
(+21 files in other folders)
